--- a/MauiApp1/DetailPage.xaml
+++ b/MauiApp1/DetailPage.xaml
@@ -31,7 +31,7 @@
                 <DataTemplate x:DataType="models:PokedexEntry">
                     <Grid ColumnDefinitions="*" RowDefinitions="auto,auto" Margin="0,10,0,10">
                         <Label Text="{Binding Game}"></Label>
-                        <Border  Grid.Row="1" >
+                        <Border Padding="5" Grid.Row="1" >
                             <Label LineBreakMode="WordWrap" Text="{Binding Description}"></Label>
                         </Border>
                     </Grid>
